add commitId to openapi
